[gd_scene format=3 uid="uid://dve08hijp44ve"]

[ext_resource type="Texture2D" uid="uid://pg3ysmyk3n1v" path="res://Entities/Baby_Pig/baby-pig-0001.png" id="1_1dsd4"]
[ext_resource type="Script" uid="uid://dachqtvgepf5d" path="res://Entities/Baby_Pig/baby_pig.gd" id="1_8tryy"]
[ext_resource type="Texture2D" uid="uid://b4f123mo8y4xr" path="res://Entities/Baby_Pig/baby-pig-0002.png" id="2_8tryy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1dffp"]
size = Vector2(11, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_nkia2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_a55cy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_1dsd4")
}, {
"duration": 1.0,
"texture": ExtResource("2_8tryy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Baby_Pig" type="CharacterBody2D" unique_id=664301724 groups=["mobs", "pigs"]]
script = ExtResource("1_8tryy")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1648810248]
position = Vector2(-0.5, 3.5)
shape = SubResource("RectangleShape2D_1dffp")

[node name="BabyPigArea2D" type="Area2D" parent="." unique_id=161324357]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BabyPigArea2D" unique_id=1739536060]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_nkia2")

[node name="Baby_Pig_AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=513323041]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_a55cy")

[node name="Timer" type="Timer" parent="." unique_id=1419441474]
wait_time = 45.0
one_shot = true
autostart = true

[node name="WalkTimer" type="Timer" parent="." unique_id=2110612218]
autostart = true

[connection signal="area_entered" from="BabyPigArea2D" to="." method="_on_baby_pig_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="aging_on_timer_timeout"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_walk_timer_timeout"]
